--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cffi==1.15.0
 click==8.1.3
 colorama==0.4.4
 cycler==0.11.0
+Cython==0.29.28
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
@@ -16,6 +17,7 @@ entrypoints==0.4
 executing==0.8.3
 fastjsonschema==2.15.3
 fonttools==4.33.3
+gensim==4.2.0
 ipykernel==6.13.0
 ipython==8.3.0
 ipython-genutils==0.2.0
@@ -63,6 +65,7 @@ scipy==1.8.1
 seaborn==0.11.2
 Send2Trash==1.8.0
 six==1.16.0
+smart-open==6.0.0
 soupsieve==2.3.2.post1
 stack-data==0.2.0
 terminado==0.15.0
